# llm-change-agent

./: .cruft.json  .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  genindex.html  index.html  installation.html  introduction.html  llm_change_agent.evaluations.html  llm_change_agent.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini  usage.html
.github/workflows/: deploy-docs.yml  qc.yml
_sources/: installation.rst.txt  llm_change_agent.evaluations.rst.txt  llm_change_agent.rst.txt  modules.rst.txt
docs/: conf.py  index.rst  introduction.rst  usage.rst
src/llm_change_agent/: __init__.py  cli.py  constants.py  llm_agent.py
src/llm_change_agent/config/: llm_config.py
src/llm_change_agent/evaluations/: __init__.py  evaluator.py
src/llm_change_agent/evaluations/input/: evaluation_prs.yaml
src/llm_change_agent/evaluations/input/eval_docs/: EnvironmentOntology_envo.yaml  geneontology_go_ontology.yaml  monarch_initiative_mondo.yaml  obophenotype_cell_ontology.yaml  obophenotype_uberon.yaml  pato_ontology_pato.yaml
src/llm_change_agent/evaluations/input/expected/: EnvironmentOntology_envo.yaml  obophenotype_cell_ontology.yaml  obophenotype_uberon.yaml  pato_ontology_pato.yaml
src/llm_change_agent/evaluations/output/: metrics.yaml
src/llm_change_agent/evaluations/output/cborg/anthropic_claude-sonnet/: EnvironmentOntology_envo.yaml  geneontology_go_ontology.yaml  monarch_initiative_mondo.yaml  obophenotype_cell_ontology.yaml  obophenotype_uberon.yaml  pato_ontology_pato.yaml
src/llm_change_agent/evaluations/output/cborg/google_gemini-pro/: EnvironmentOntology_envo.yaml  geneontology_go_ontology.yaml  monarch_initiative_mondo.yaml  obophenotype_cell_ontology.yaml  obophenotype_uberon.yaml  pato_ontology_pato.yaml
src/llm_change_agent/evaluations/output/openai/gpt-4o-2024-08-06/: EnvironmentOntology_envo.yaml  (+5 more)
src/llm_change_agent/templates/: templates.py
src/llm_change_agent/utils/: click_utils.py  general_utils.py  llm_utils.py
tests/: __init__.py  demo_test.py
